# mcp-server-synapse

./: .gitignore  README.md  pyproject.toml
src/mcp_server_synapse/: __init__.py  server.py  synapse_wrapper.py  utils.py
tests/: test_tools.py
