[project]
name = "mcp-server-synapse"
version = "0.2.1"
description = "MCP server for synapse-ai-context"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "synapse-tool @ git+https://github.com/YuanArchive/synapse-ai-context.git@137cf533df0021d72a26aee7c52ad47d66ee64b8",
]

[project.scripts]
mcp-server-synapse = "mcp_server_synapse.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
